# Xpeccy

./: .gitignore  BUILDING.macOS  CMakeLists.txt  ChangeLog  Info.plist  LICENSE_eng  LICENSE_rus  MacOSXBundleInfo.plist.in  README  Release  Xpeccy.desktop  autobuld.sh  keymap  mac_build.sh  xpeccy.qrc  xpeccy.rc
.github/workflows/: cmake.yml
cmake/: FindSDL2.cmake  MacOSXBundleInfo.plist.in
conf/: config.conf  xpeccy.conf
conf/palettes/: atm.txt  next.txt  pulsar.txt  schafft.txt  spectaculator.txt  wiki1.txt  wiki2.txt
images/: xpeccy.icns
packaging/: dmgsetup.scpt
src/: ayym.cpp  ayym.h  bdi.cpp  bdi.h  common.h  dbg_disasm.cpp  dbg_disasm.h  dbg_dump.cpp  dbg_dump.h  dbg_finder.cpp  dbg_finder.h  dbg_memfill.cpp  dbg_memfill.h  dbg_sprscan.cpp  dbg_sprscan.h  debuger.cpp  debuger.h  develwin.cpp  develwin.h  emulapp.cpp  emulapp.h  emulwin.cpp  emulwin.h  emw_keys.cpp  emw_mouse.cpp  emw_network.cpp  emw_opengl.cpp  ethread.cpp  ethread.h  filer.cpp  filer.h  floppy.cpp  floppy.h  gs.cpp  gs.h  hdd.cpp  hdd.h  input.cpp  input.h  iosys.cpp  (+32 more)
src/filetypes/: common.cpp  dsk.cpp  fdi.cpp  filetypes.h  hobeta.cpp  raw.cpp  rzx.cpp  scl.cpp  sna.cpp  spg.cpp  tap.cpp  trd.cpp  tzx.cpp  udi.cpp  z80.cpp
src/filetypes/unpackers/: dehrust1.cpp  demegalz.cpp
src/lib765/: 765dsk.c  config.h  error.c
src/libxpeccy/: CMakeLists.txt  ayym.c  ayym.h  bdi.c  bdi.cpp  bdi.h  cartridge.c  cartridge.h  cmos.c  cmos.h  cpu.h  defines.h  devbus.h  device.c  device.h  diskif.c  fdc.h  floppy.c  floppy.h  gs.c  gs.cpp  gs.h  hdd.c  hdd.cpp  hdd.h  heatmap.c  heatmap.h  i8042_kbd.c  i8042_kbd.h  i8237_dma.c  i8237_dma.h  i8253_pit.c  i8253_pit.h  i8255_ppi.c  i8255_ppi.h  i8259_pic.c  i8259_pic.h  input.c  input.h  input_ps2_8042.c  (+43 more)
src/libxpeccy/cpu/: cpu.c  cpu.h  macros.h  tables.c
src/libxpeccy/cpu/1801vm1/: 1801vm1.c  1801vm1.h  1801vm1_asm.c
src/libxpeccy/cpu/LR35902/: lr35902.c  lr35902.h  lr_macro.h  lr_nopref.c  lr_pref_cb.c  lr_tab.c
src/libxpeccy/cpu/MOS6502/: 6502.c  6502.h  6502_alu.c  6502_macro.h  6502_opcode.c
src/libxpeccy/cpu/NEC V30/: v30.c  v30.h  v30_emu80.h  v30_emu80_op.c  v30opc.c  v30opc_0f.c  v30regs.h
src/libxpeccy/cpu/PDP11/: pdp11.c  pdp11.h
src/libxpeccy/cpu/Z80/: z80.c  z80.h  z80_alu.c  z80_macro.h  z80_nop.h  z80_rot.c  z80_tab.c  z80cb.c  z80dd.c  z80ddcb.c  z80ed.c  z80fd.c  z80fdcb.c  z80nop.c
src/libxpeccy/cpu/i80286/: i286_alu.c  i286_rot.c  i80286.c  i80286.h  i80286_0F.c  i80286_nop.c  i80287.c
src/libxpeccy/cpu/i8080/: i8080.c  i8080.h  i8080_op.c
src/libxpeccy/cpu/x86/: i286_alu.c  i80286.c  i80286.h  i80286_0F.c  i80286_nop.c
src/libxpeccy/filetypes/: bkbin.c  bkimg.c  c64prg.c  cartridge.c  cas.c  common.c  dsk.c  fdi.c  fdi98.c  filetypes.c  filetypes.h  gbc.c  hobeta.c  ima.c  msx.c  nes.c  raw.c  rks.c  rzx.c  scl.c  slot_raw.c  sna.c  spg.c  spg.cpp  t64.c  tap.c  td0.c  trd.c  tzx.c  udi.c  wav.c  z80.c
src/libxpeccy/filetypes/unpackers/: bbstream.c  dehrust1.c  demegalz.c  unpackers.h
src/libxpeccy/filetypes/unpackers/lh1/: bit_stream_reader.c  lha_decoder.c
src/libxpeccy/hardware/: alf.c  atm2.c  bk0010-01.c  bk0011.c  c64.c  common.c  dummyhw.c  gameboy.c  hardware.c  hardware.h  ibm_pc_at.c  msx.c  msx2.c  nes.c  pc9801.c  pent1024.c  pentagon.c  pentevo.c  phoenix.c  plus2.c  plus3.c  profi.c  scorpion.c  specialist.c  tslab.c  zx48.c
src/libxpeccy/input/: input.h  joystick.c  keyboard.c  mouse.c
src/libxpeccy/sound/: ay-3-8910.c  ayym.c  ayym.h  gbsound.c  gbsound.h  gs.c  gs.h  nesapu.c  nesapu.h  saa1099.c  saa1099.h  sndcommon.c  sndcommon.h  soundrive.c  soundrive.h  ym-2149.c  ym-2203.c
src/libxpeccy/video/: bk0010.c  gbcvideo.c  gbcvideo.h  nesppu.c  nesppu.h  specialist_gpu.c  tsconf.c  ulaplus.c  ulaplus.h  upd7220.c  upd7220.h  v9938.c  v9938.h  vga.c  vga.h  vic-ii.c  vidcommon.h  video.c  video.h
src/libxpeccy/z80/: z80.c  z80.h  z80cb.c  z80dd.c  z80ddcb.c  z80ed.c  z80fd.c  z80fdcb.c  z80macros.h  z80nop.c  z80tables.c
src/libz80ex/: z80ex_dasm.c
src/xcore/: bookmarks.cpp  breakpoints.cpp  common.cpp  config.cpp  gamepad.cpp  gamepad.h  hardwares.cpp  keymap.cpp  labels.cpp  layouts.cpp  migrate.cpp  migrate.h  pacing.cpp  pacing.h  palette.cpp  profiles.cpp  romsets.cpp  sound.cpp  sound.h  vfilters.cpp  vfilters.h  vscalers.cpp  vscalers.h  xcore.h  xmap.cpp
src/xgui/: classes.cpp  classes.h  dialogs.cpp  labelist.cpp  labelist.h  resources_ui.h  rzxwin.cpp  tapewin.cpp  xgui.h
src/xgui/debuga/: dbg_ayym.cpp  dbg_brkpoints.cpp  dbg_brkpoints.h  dbg_cia.cpp  dbg_cmos_dump.cpp  dbg_cmos_dump.h  dbg_disasm.cpp  dbg_disasm.h  dbg_diskdump.cpp  dbg_diskdump.h  dbg_dma.cpp  dbg_dma.h  dbg_dump.cpp  dbg_dump.h  dbg_fdd.cpp  dbg_finder.cpp  dbg_finder.h  dbg_gameboy.cpp  dbg_memfill.cpp  dbg_memfill.h  dbg_memmap.cpp  dbg_nesppu.cpp  dbg_pic.cpp  dbg_pic.h  dbg_pit.cpp  dbg_pit.h  dbg_rdump.cpp  dbg_rdump.h  dbg_sprscan.cpp  dbg_sprscan.h  dbg_tape.cpp  dbg_vga_regs.cpp  dbg_vga_regs.h  dbg_vic_regs.cpp  dbg_vic_regs.h  dbg_vmem_dump.cpp  dbg_vmem_dump.h  dbg_widgets.h  dbg_zxscr.cpp  debuger.cpp  (+1 more)
src/xgui/options/: opt_diskcat.cpp  opt_diskcat.h  opt_gamepad.cpp  (+13 more)
src/z80/: gen.sh  instr.c  pref_cb.c  pref_cbx.c  pref_cby.c  pref_ed.c  pref_ix.c  pref_iy.c  pref_no.c  tables.c
thirdpart/libz80ex/: z80ex_dasm.c
thirdpart/packers/: dehrust1.cpp  demegalz.cpp  packers.h
tools/: heatmap_png.py
ui/: bpeditor.ui  brkmanager.ui  dbgfinder.ui  debuga.ui  debuger.ui  develwin.ui  dumpdial.ui  filler.ui  labelist.ui  layedit.ui  memviewer.ui  openDump.ui  opt_gpadwidget.ui  padbinder.ui  paleditor.ui  rsedit.ui  rzxplayer.ui  sdkwin.ui  selname.ui  setupwin.ui  tapewin.ui  umadial.ui  watcher.ui  wch_new.ui
ui/dbgwidgets/: form_ay.ui  form_brkpoints.ui  form_cia.ui  form_cmosdump.ui  form_cpu.ui  form_disasm.ui  form_dma.ui  form_dump.ui  form_fdd.ui  form_fdddump.ui  form_gameboy.ui  form_mem.ui  form_misc.ui  form_nesapu.ui  form_nesppu.ui  form_pic.ui  form_pit.ui  form_ps2.ui  form_regdump.ui  form_tape.ui  form_vga.ui  form_vic.ui  form_vmemdump.ui  form_zxscreen.ui
